added to training and added back to top button on screens

--- a/FinalProject.Web/Views/Shared/_Layout.cshtml
+++ b/FinalProject.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,11 @@
         </main>
     </div>
 
+    <button id="back-to-top" title="Back To Top">
+        <i class="bi bi-arrow-up-square"></i>
+    </button>
+
+
     <footer class="border-top footer text-muted text-center">
         <div class="container">
             &copy; @DateTime.Now.Year - Woof & Wander - <a asp-controller="Home" asp-action="Privacy">Privacy</a>
